--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .import/
 android/
 export.cfg
-export_presets.cfg
+#export_presets.cfg # Commented out for use with Github Actions
 
 # Imported translations (automatically generated from CSV files)
 *.translation
